# Code-learn

./: .gitignore  README.md  backend.dev.dockerfile  backend.dockerfile  docker-compose.dev.yml  docker-compose.yml  frontend.dev.dockerfile  frontend.dockerfile
backend/: Cargo.toml  index.ts  model.ts  package.json  pnpm-lock.yaml
backend/src/: main.rs
code-learn/: next.config.js  package.json  pnpm-lock.yaml
code-learn/src/app/: globals.css  layout.tsx  page.css  page.tsx
code-learn/src/app/api/chat/: route.ts
code-learn/src/app/api/problems/: route.ts
code-learn/src/components/: ChatInterface.css  ChatInterface.tsx  CodeInterface.css
code-learn/src/types/: types.d.ts
frontend/: index.html  nginx.conf  package.json  pnpm-lock.yaml  start.sh
frontend/components/: ChatInterface.css  ChatInterface.tsx  CodeInterface.css  CodeInterface.tsx
frontend/src/: App.css  App.tsx  index.css
frontend/types/: types.d.ts
rust_backend/: Cargo.toml  start.sh
rust_backend/src/: main.rs
